[gd_scene load_steps=2 format=3 uid="uid://b7k3m9n2p4q8r"]

[ext_resource type="Script" path="res://conspiracy_board/scripts/data_log_card.gd" id="1_card_script"]

[node name="DataLogCard" type="Control"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 150.0
mouse_filter = 1
script = ExtResource("1_card_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Data Log Title"
autowrap_mode = 2
clip_text = true

[node name="PreviewLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 10
text = "Preview text goes here. This will be truncated if it's too long for the card display area."
autowrap_mode = 3
clip_text = true
